# morthal

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
morthal/: __main__.py
morthal/analyze/collect/: __init__.py  collect.py  data.py  utils.py
morthal/analyze/recap/: __init__.py
morthal/analyzer/: __init__.py
morthal/history/: __init__.py
morthal/main/: __init__.py
morthal/reporter/: README.md  __init__.py  html_reporter.py  plotting.py  templates.py
morthal/stats/: __init__.py
morthal/utils/ast/: __init__.py
morthal/utils/calc/: __init__.py
morthal/utils/codebase/: __init__.py
morthal/utils/df/: __init__.py
morthal/utils/path/: __init__.py
morthal/utils/store/: __init__.py
morthal/utils/url/: __init__.py
morthal/vcs/: __init__.py  operations.py
src/: morthal.py
tests/: test_get_func_stats.py  test_main_handle.py  test_utils_ast.py  test_utils_codebase.py  test_utils_df.py  test_utils_store.py  test_utils_url.py  test_vcs_url_utils.py
