[project]
name = "morthal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "GitPython>=3.1.40",
    "matplotlib>=3.10.8",
    "polars>=1.24.0",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "pytest>=8.3.5",
    "seaborn>=0.13.2",
]

[project.scripts]
morthal = "morthal.__main__:main"

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "pytest>=8.3.5",
]
